@@ -1,2 +1,3 @@
 del *.class
 javac -cp c:/jogl26/jogamp-fat.jar;. %*
+java --add-exports java.base/java.lang=ALL-UNNAMED --add-exports java.desktop/sun.java2d=ALL-UNNAMED --add-exports java.desktop/sun.awt=ALL-UNNAMED -cp c:/jogl26/jogamp-fat.jar;. %*
